tests/invalid_programs/variable1.jas
// Expect variable name.

let = 5;
